# perl-xs

./: .travis.yml  Cargo.toml
bench/rs/: Makefile.PL
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs
crates/derive-macro/: Cargo.toml
crates/derive-macro-support/: Cargo.toml
crates/derive-macro/src/: lib.rs
crates/macro/: Cargo.toml
crates/macro-support/: Cargo.toml
crates/macro-support/src/: lib.rs
crates/macro/src/: lib.rs
src/: context.rs  hash.rs  lib.rs
t/: Makefile.PL
