[package]
name = "perl-xs-common"
version = "0.1.1"
authors = ["The perl-xs Developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/vickenty/perl-xs/tree/master/crates/common"
description = """
Common code for perl-xs crates
"""
edition = "2018"

[features]

[dependencies]
bumpalo = "2.1"
lazy_static = "1.0.0"
log = "0.4"
proc-macro2 = "0.4.8"
quote = '0.6'
syn = { version = '0.15', features = ['full'] }